--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,24 +1,39 @@
-name: Weather Auto Sender
+name: Weather Auto Sender ☀️
 
 on:
   schedule:
     - cron: '0 6 * * *'     # هر روز ساعت 6 صبح UTC
     - cron: '0 18 * * *'    # هر روز ساعت 6 عصر UTC
-  workflow_dispatch: {}
+  workflow_dispatch: {}      # اجرای دستی از GitHub
 
 jobs:
   send:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v4
+
+      - name: 🐍 Setup Python
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install requests
-      - run: python send_weather.py
+
+      - name: 📦 Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests jdatetime
+
+      - name: 📅 Run weather sender script
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           OPENWEATHER_KEY: ${{ secrets.OPENWEATHER_KEY }}
           CHAT_IDS: ${{ secrets.CHAT_IDS }}
           REGION_NAME: ${{ secrets.REGION_NAME }}
           IMAGE_URL: ${{ secrets.IMAGE_URL }}
+        run: |
+          echo "Starting Weather Bot at $(date -u)"
+          python send_weather.py || {
+            echo "❌ Error: Script failed!"
+            exit 1
+          }
+          echo "✅ Weather Bot finished successfully at $(date -u)"
