--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,8 +2,8 @@ name: Weather Auto Sender ☀️
 
 on:
   schedule:
-    - cron: '0 6 * * *'     # هر روز ساعت 6 صبح UTC
-    - cron: '0 18 * * *'    # هر روز ساعت 6 عصر UTC
+    - cron: '0 6 * * *'      # هر روز ساعت 6 صبح UTC
+    - cron: '0 18 * * *'     # هر روز ساعت 6 عصر UTC
   workflow_dispatch: {}
 
 jobs:
@@ -16,25 +16,32 @@ jobs:
       - name: 🐍 Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.10' # یا هر نسخه 3.x دیگری که ترجیح می‌دهید
 
       - name: 📦 Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install requests jdatetime
+          # ارتقاء pip
+          python -m pip install --upgrade pip
+          
+          # نصب کتابخانه‌های مورد نیاز: requests (برای API) و jdatetime (برای تاریخ شمسی)
+          pip install requests jdatetime # ⬅️ حل کننده مشکل ModuleNotFoundError
           echo "✅ Installed packages:"
           pip list
-
+          
       - name: 📅 Run weather sender script
         env:
+          # --- متغیرهای محیطی که از Secrets مخزن می‌آیند ---
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           OPENWEATHER_KEY: ${{ secrets.OPENWEATHER_KEY }}
           CHAT_IDS: ${{ secrets.CHAT_IDS }}
-          REGION_NAME: ${{ secrets.REGION_NAME }}
-          IMAGE_URL: ${{ secrets.IMAGE_URL }}
+          REGION_NAME: ${{ secrets.REGION_NAME }} # اگر به عنوان Secret تعریف شده
+          IMAGE_URL: ${{ secrets.IMAGE_URL }}     # اگر به عنوان Secret تعریف شده
+          # اگر از LAT/LON استفاده می‌کنید، باید اینجا تعریف شوند:
+          # LAT: ${{ secrets.LAT }}
+          # LON: ${{ secrets.LON }}
+          
         run: |
           echo "🚀 Starting Weather Bot at $(date -u)"
-          python -c "import jdatetime; print('✅ jdatetime imported successfully!')"  # تست قبل از اجرای اصلی
           python send_weather.py || {
             echo "❌ Error: Script failed!"
             exit 1
