--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -18,13 +18,11 @@ jobs:
         with:
           python-version: '3.10' # یا هر نسخه 3.x دیگری که ترجیح می‌دهید
 
-- name: 📦 Install dependencies
+      - name: 📦 Install dependencies
+        # این کد مطمئن می‌شود که pip از PATH درست استفاده می‌کند
         run: |
-          # اطمینان از نصب pip
-          python -m pip install --upgrade pip
-          
-          # نصب کتابخانه‌های مورد نیاز (جایی که jdatetime اضافه شد)
-          pip install requests jdatetime 
+          python3 -m pip install --upgrade pip
+          python3 -m pip install requests jdatetime # ⬅️ حل کننده نهایی مشکل jdatetime
           echo "✅ Installed packages:"
           pip list
           
