--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -18,13 +18,12 @@ jobs:
         with:
           python-version: '3.10' # یا هر نسخه 3.x دیگری که ترجیح می‌دهید
 
-      - name: 📦 Install dependencies
-        # این کد مطمئن می‌شود که pip از PATH درست استفاده می‌کند
+      - name: 📦 Install dependencies (Force)
+        # استفاده از دستور کامل پایتون برای دور زدن مشکلات PATH و Cache
         run: |
           python3 -m pip install --upgrade pip
-          python3 -m pip install requests jdatetime # ⬅️ حل کننده نهایی مشکل jdatetime
-          echo "✅ Installed packages:"
-          pip list
+          python3 -m pip install requests jdatetime
+          echo "✅ jdatetime installed successfully."
           
       - name: 📅 Run weather sender script
         env:
