--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,8 +2,8 @@ name: Weather Auto Sender ☀️
 
 on:
   schedule:
-    - cron: '0 6 * * *'      # هر روز ساعت 6 صبح UTC
-    - cron: '0 18 * * *'     # هر روز ساعت 6 عصر UTC
+    - cron: '30 3 * * *'      # ⬅️ 7:00 صبح ایران = 3:30 بامداد UTC
+    - cron: '30 18 * * *'     # ⬅️ 10:00 شب ایران = 18:30 عصر UTC
   workflow_dispatch: {}
 
 jobs:
